--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,21 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.list-image {
+  display: block !important;
+}
